--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -20,7 +20,7 @@
 <p><a href="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/507071d4d4a1ede10dfdfaa411a0db154ea19090/random_draw.py&amp;src2=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/b1854861f8399ce7daf471638f6f183907d0e94f/list.py"><span>點這裡執行</span>測試</a></p>
 <h2>W10</h2>
 <h3>作業程式</h3>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022?htmlsrc=https://gist.githubusercontent.com/hank474/9f0bf6c173aca573f204eaf3061bb2b7/raw/97d2fc2bb9932ca96e1d927d5c107fb03bdd3b8c/gistfile1.txt"><span>點這裡執行</span>w10 hw1</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/9f0bf6c173aca573f204eaf3061bb2b7/raw/97d2fc2bb9932ca96e1d927d5c107fb03bdd3b8c/gistfile1.txt"><span>點這裡執行</span>w10 hw1</a></p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/e934816cc574e6a2836eea62c1e7a4c8/raw/c4d9d9b97f92c1e7f8f94652b4a2fb20414b3fcc/gistfile1.txt"><span>點這裡執行</span>w10 hw2</a></p>
 <h2>w11</h2>
 <h3>老師的繪畫方格</h3>
@@ -32,20 +32,23 @@
 <h3>溫度轉換</h3>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/029b1f8b5d1ce03f49f3dbd274b74027b6363f00/w13temp_ex1.py"><span>點這裡執行:</span>w13溫度轉換程式</a>ex1</p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/cc13a508c73ea94e43dc7203930d197f9b774a9b/w13temp_ex2.py"><span>點這裡執行:</span>w13溫度轉換程式</a>ex2</p>
+<h2>w14</h2>
+<div><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/7f98aa18c39e3c0aeff0cd40bc2e2ee8/raw/a67e4f8a638b66e5d32e6484a436f8d2dd413ba0/gistfile1.txt"><span>點這裡執行</span>:1aw14抽考缺考人員名單</a></div>
 <h1>本班考試成績</h1>
 <h3>w4</h3>
 <p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)程式</p>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/a3c737627e49e66e3497dd30b85e094c/raw/06d39ee4e882e6470df2646fd694fb4be6cfb11c/gistfile1.txt">點這列出w4成績</a></p><h2>w8</h2>
-<p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)</p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/a3c737627e49e66e3497dd30b85e094c/raw/06d39ee4e882e6470df2646fd694fb4be6cfb11c/gistfile1.txt">點這列出w4成績</a></p>
+<h2>w8</h2>
+<p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)<span>程式</span></p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/325dd1e183670185611e70b5cfee49f3/raw/d77c8d982030c76f010a31dd58be273bc757a6d1/gistfile1.txt">點這列出w8成績</a></p>
 <h2>w9</h2>
-<p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)</span></p>
+<p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)程式</span></p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/916b9fee8fc0bc3623664a74bbd7ea66/raw/1d0896a7c64371e6f0a8ccff2898b33a4f249889/gistfile1.txt">點這列出w9成績</a></p>
 <h2>w10</h2>
-<p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)</span></p>
+<p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)程式</span></p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/96ac7e7619ab0b0e454149370eb08fd2/raw/d25a1c676f73270ccf1db74e744e2fba2de2ee8c/gistfile1.txt">點這列出w10成績</a></p>
 <h2>w14</h2>
-<p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)</span></p>
+<p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)程式</span></p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/807f15ed039ff6ad06f332f711e2bc64/raw/0024b37580cfc0c17906397543bfdfc1a899c958/gistfile1.txt">點這列出w14成績</a></p>
 <h1>筆記</h1>
 <div>import:導入 </div>
