--- a/content/1a w14抽考成績與缺考人員名單.html
+++ b/content/1a w14抽考成績與缺考人員名單.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,8 +141,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">密碼亂數 << <a href='密碼亂數.html'>Previous</a> <a href='抽點.html'>Next</a> >> 抽點<br /><h1>W6</h1>
-<br />密碼亂數 << <a href='密碼亂數.html'>Previous</a> <a href='抽點.html'>Next</a> >> 抽點</div>
+    <div id="tipue_search_content">w14-1 << <a href='w14-1.html'>Previous</a> <a href='本班考試成績.html'>Next</a> >> 本班考試成績<br /><h1>1a w14抽考成績與缺考人員名單</h1>
+<div><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/7f98aa18c39e3c0aeff0cd40bc2e2ee8/raw/a67e4f8a638b66e5d32e6484a436f8d2dd413ba0/gistfile1.txt"><span>點這裡執行</span>:1aw14抽考缺考人員名單</a></div>
+<br />w14-1 << <a href='w14-1.html'>Previous</a> <a href='本班考試成績.html'>Next</a> >> 本班考試成績</div>
         
     <!-- footer -->
       <div class="container">
