--- a/config/content.htm
+++ b/config/content.htm
@@ -20,7 +20,7 @@
 <p><a href="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/507071d4d4a1ede10dfdfaa411a0db154ea19090/random_draw.py&amp;src2=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/b1854861f8399ce7daf471638f6f183907d0e94f/list.py"><span>點這裡執行</span>測試</a></p>
 <h2>W10</h2>
 <h3>作業程式</h3>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022?htmlsrc=https://gist.githubusercontent.com/hank474/9f0bf6c173aca573f204eaf3061bb2b7/raw/97d2fc2bb9932ca96e1d927d5c107fb03bdd3b8c/gistfile1.txt"><span>點這裡執行</span>w10 hw1</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/9f0bf6c173aca573f204eaf3061bb2b7/raw/97d2fc2bb9932ca96e1d927d5c107fb03bdd3b8c/gistfile1.txt"><span>點這裡執行</span>w10 hw1</a></p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/e934816cc574e6a2836eea62c1e7a4c8/raw/c4d9d9b97f92c1e7f8f94652b4a2fb20414b3fcc/gistfile1.txt"><span>點這裡執行</span>w10 hw2</a></p>
 <h2>w11</h2>
 <h3>老師的繪畫方格</h3>
@@ -32,6 +32,9 @@
 <h3>溫度轉換</h3>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/029b1f8b5d1ce03f49f3dbd274b74027b6363f00/w13temp_ex1.py"><span>點這裡執行:</span>w13溫度轉換程式</a>ex1</p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/cc13a508c73ea94e43dc7203930d197f9b774a9b/w13temp_ex2.py"><span>點這裡執行:</span>w13溫度轉換程式</a>ex2</p>
+<h2>w14</h2>
+<h3>1a w14抽考成績與缺考人員名單</h3>
+<div><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/7f98aa18c39e3c0aeff0cd40bc2e2ee8/raw/a67e4f8a638b66e5d32e6484a436f8d2dd413ba0/gistfile1.txt"><span>點這裡執行</span>:1aw14抽考缺考人員名單</a></div>
 <h1>本班考試成績</h1>
 <h3>w4</h3>
 <p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)程式</p>
