--- a/content/w14-1.html
+++ b/content/w14-1.html
@@ -141,8 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">密碼亂數 << <a href='密碼亂數.html'>Previous</a> <a href='抽點.html'>Next</a> >> 抽點<br /><h1>W6</h1>
-<br />密碼亂數 << <a href='密碼亂數.html'>Previous</a> <a href='抽點.html'>Next</a> >> 抽點</div>
+    <div id="tipue_search_content">溫度轉換 << <a href='溫度轉換.html'>Previous</a> <a href='1a w14抽考成績與缺考人員名單.html'>Next</a> >> 1a w14抽考成績與缺考人員名單<br /><h1>w14-1</h1>
+<br />溫度轉換 << <a href='溫度轉換.html'>Previous</a> <a href='1a w14抽考成績與缺考人員名單.html'>Next</a> >> 1a w14抽考成績與缺考人員名單</div>
         
     <!-- footer -->
       <div class="container">
