--- a/content/心得.html
+++ b/content/心得.html
@@ -143,6 +143,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">筆記 << <a href='筆記.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1<br /><h1>心得</h1>
 <p><b>労働はクソということです。</b></p>
+<p><b>感覺python跟c++滿像但又蠻多地方不一樣</b></p>
 <br />筆記 << <a href='筆記.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1</div>
         
     <!-- footer -->
