--- a/config/content.htm
+++ b/config/content.htm
@@ -63,6 +63,7 @@
 <div></div>
 <h1>心得</h1>
 <p><b>労働はクソということです。</b></p>
+<p><b>感覺python跟c++滿像但又蠻多地方不一樣</b></p>
 <h1>cp2022H1</h1>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕 (<a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件).</p>
 <p><a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件應該可以在啟動 Brython 時, 設定將 .py 檔案放入 downloads/py 目錄中引用.</p>
