添加因此(還無法列出缺考名單)說明

--- a/content/第10週.html
+++ b/content/第10週.html
@@ -143,6 +143,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">第9週 << <a href='第9週.html'>Previous</a> <a href='第14週.html'>Next</a> >> 第14週<br /><h1>第10週</h1>
 <p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)程式</span></p>
+<p><span>因此還無法列出<span>缺考名單</span></span></p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/96ac7e7619ab0b0e454149370eb08fd2/raw/d25a1c676f73270ccf1db74e744e2fba2de2ee8c/gistfile1.txt">點這列出w10成績</a></p>
 <br />第9週 << <a href='第9週.html'>Previous</a> <a href='第14週.html'>Next</a> >> 第14週</div>
         
