--- a/content/第8週.html
+++ b/content/第8週.html
@@ -143,6 +143,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">第4週 << <a href='第4週.html'>Previous</a> <a href='第9週.html'>Next</a> >> 第9週<br /><h1>第8週</h1>
 <p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)<span>程式</span></p>
+<p><span>因此還無法列出<span>缺考名單</span></span></p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/325dd1e183670185611e70b5cfee49f3/raw/d77c8d982030c76f010a31dd58be273bc757a6d1/gistfile1.txt">點這列出w8成績</a></p>
 <br />第4週 << <a href='第4週.html'>Previous</a> <a href='第9週.html'>Next</a> >> 第9週</div>
         
