--- a/content/第14週.html
+++ b/content/第14週.html
@@ -143,6 +143,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">第10週 << <a href='第10週.html'>Previous</a> <a href='筆記.html'>Next</a> >> 筆記<br /><h1>第14週</h1>
 <p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)程式</span></p>
+<p><span>因此還無法列出<span>缺考名單</span></span></p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/807f15ed039ff6ad06f332f711e2bc64/raw/0024b37580cfc0c17906397543bfdfc1a899c958/gistfile1.txt">點這列出w14成績</a></p>
 <br />第10週 << <a href='第10週.html'>Previous</a> <a href='筆記.html'>Next</a> >> 筆記</div>
         
