--- a/config/content.htm
+++ b/config/content.htm
@@ -69,6 +69,7 @@
 <div></div>
 <h1>心得</h1>
 <p><b>労働はクソということです。</b></p>
+<p><b>在各種聽不懂的詞彙轟炸下也來到了學期末,感覺自己好像有點懂了這課程又好像沒懂</b></p>
 <p><b>感覺python跟c++滿像但又蠻多地方不一樣</b></p>
 <h1>cp2022H1</h1>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕 (<a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件).</p>
