添加1b考試成績

--- a/content/第4週.html
+++ b/content/第4週.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='密碼亂數.html'>密碼亂數</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='抽點.html'>抽點</a><li><a href='奇怪的3D方塊.html'>奇怪的3D方塊</a><li><a href='test.html'>test</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='作業程式.html'>作業程式</a></li></ul><li class='has-children'><a href='w11.html'>w11</a><ul class='dropdown'><li><a href='老師的繪畫方格.html'>老師的繪畫方格</a></li></ul><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='參考.html'>參考</a></li></ul><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='溫度轉換.html'>溫度轉換</a></li></ul><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='1a w14抽考成績與缺考人員名單.html'>1a w14抽考成績與缺考人員名單</a></li></li></ul></ul><li class='has-children'><a href='考試成績.html'>考試成績</a><ul class='dropdown'><li><a href='第4週.html'>第4週</a><li><a href='第8週.html'>第8週</a><li><a href='第9週.html'>第9週</a><li><a href='第10週.html'>第10週</a><li><a href='第14週.html'>第14週</a></li></ul><li><a href='單字.html'>單字</a><li><a href='心得.html'>心得</a><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='密碼亂數.html'>密碼亂數</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='抽點.html'>抽點</a><li><a href='奇怪的3D方塊.html'>奇怪的3D方塊</a><li><a href='test.html'>test</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='作業程式.html'>作業程式</a></li></ul><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='老師的繪畫方格.html'>老師的繪畫方格</a></li></ul><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='參考.html'>參考</a></li></ul><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='溫度轉換.html'>溫度轉換</a></li></ul><li class='has-children'><a href='W14.html'>W14</a><ul class='dropdown'><li><a href='1a w14抽考成績與缺考人員名單.html'>1a w14抽考成績與缺考人員名單</a></li></li></ul></ul><li class='has-children'><a href='考試成績.html'>考試成績</a><ul class='dropdown'><li class='has-children'><a href='1a.html'>1a</a><ul class='dropdown'><li><a href='第4週.html'>第4週</a><li><a href='第8週.html'>第8週</a><li><a href='第9週.html'>第9週</a><li><a href='第10週.html'>第10週</a><li><a href='第14週.html'>第14週</a></li></ul><li class='has-children'><a href='1b.html'>1b</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w14.html'>w14</a></li></li></ul></ul><li><a href='單字.html'>單字</a><li><a href='心得.html'>心得</a><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,11 +141,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">考試成績 << <a href='考試成績.html'>Previous</a> <a href='第8週.html'>Next</a> >> 第8週<br /><h1>第4週</h1>
+    <div id="tipue_search_content">1a << <a href='1a.html'>Previous</a> <a href='第8週.html'>Next</a> >> 第8週<br /><h1>第4週</h1>
 <p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)程式</p>
 <p>因此還無法列出缺考名單</p>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/a3c737627e49e66e3497dd30b85e094c/raw/06d39ee4e882e6470df2646fd694fb4be6cfb11c/gistfile1.txt">點這列出w4成績</a></p>
-<br />考試成績 << <a href='考試成績.html'>Previous</a> <a href='第8週.html'>Next</a> >> 第8週</div>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/a3c737627e49e66e3497dd30b85e094c/raw/a5a3207f1ba4ab6f5037ae0c8b28118b09260013/gistfile1.txt">點這列出w4成績</a></p>
+<br />1a << <a href='1a.html'>Previous</a> <a href='第8週.html'>Next</a> >> 第8週</div>
         
     <!-- footer -->
       <div class="container">
