--- a/content/1b.html
+++ b/content/1b.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,11 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w11</h1>
-<p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)程式</p>
-<p>因此還無法列出缺考名單</p>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/720d93c9be0d74b7eb2115d170428c15/raw/c76e095eeba7a7709cefc77eeaaac9efa9f0f7e9/gistfile1.txt">點這裡列出w11考試成績</a></p>
-<br />w10 << <a href='w10.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
+    <div id="tipue_search_content">第14週 << <a href='第14週.html'>Previous</a> <a href='w4.html'>Next</a> >> w4<br /><h1>1b</h1>
+<br />第14週 << <a href='第14週.html'>Previous</a> <a href='w4.html'>Next</a> >> w4</div>
         
     <!-- footer -->
       <div class="container">
