--- a/content/w4.html
+++ b/content/w4.html
@@ -141,11 +141,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w11</h1>
+    <div id="tipue_search_content">1b << <a href='1b.html'>Previous</a> <a href='w8.html'>Next</a> >> w8<br /><h1>w4</h1>
 <p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)程式</p>
 <p>因此還無法列出缺考名單</p>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/720d93c9be0d74b7eb2115d170428c15/raw/c76e095eeba7a7709cefc77eeaaac9efa9f0f7e9/gistfile1.txt">點這裡列出w11考試成績</a></p>
-<br />w10 << <a href='w10.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/8024cfe37ea3a7ee3545ab409f7c5dca/raw/f92bbc49f7e33876da309121d70c84ea2121966d/gistfile1.txt">點這裡列出w4考試成績</a></p>
+<br />1b << <a href='1b.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
         
     <!-- footer -->
       <div class="container">
