--- a/content/老師的繪畫方格.html
+++ b/content/老師的繪畫方格.html
@@ -142,7 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W11 << <a href='W11.html'>Previous</a> <a href='W12.html'>Next</a> >> W12<br /><h1>老師的繪畫方格</h1>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022?htmlsrc=https://gist.githubusercontent.com/hank474/23cb848bd3efc8a917b1b122522c5a78/raw/9d127dc87d43708958a21b17843af87fef6e3a9d/gistfile1.txt"><span>點這裡執行</span>w11繪畫方格</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/23cb848bd3efc8a917b1b122522c5a78/raw/9d127dc87d43708958a21b17843af87fef6e3a9d/gistfile1.txt"><span>點這裡執行</span>w11繪畫方格</a></p>
 <br />W11 << <a href='W11.html'>Previous</a> <a href='W12.html'>Next</a> >> W12</div>
         
     <!-- footer -->
