增加一筆心得

--- a/content/心得.html
+++ b/content/心得.html
@@ -142,9 +142,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1<br /><h1>心得</h1>
-<p><b>労働はクソということです。</b></p>
-<p><b>在各種聽不懂的詞彙轟炸下也來到了學期末,感覺自己好像有點懂了這課程又好像沒懂</b></p>
+<p></p>
+<p><b>在各種聽不懂的詞彙轟炸下也來到了學期末,感覺自己好像有點懂了這課程又好像沒懂,但我相信如果<span>能夠瞭解到python的運行方式,相信我們一定會對python改觀。</span></b></p>
 <p><b>感覺python跟c++滿像但又蠻多地方不一樣</b></p>
+<p><b>労働はクソということです。</b></p>
 <br />w14 << <a href='w14.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1</div>
         
     <!-- footer -->
