--- a/config/content.htm
+++ b/config/content.htm
@@ -85,9 +85,10 @@
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/6464b77824f57aac51d16dfe31b9a8f1/raw/eb9389f5b07968bccff28b52e0516ecfa527a6f3/gistfile1.txt">點這裡列出w14考試成績</a></p>
 <div></div>
 <h1>心得</h1>
-<p><b>労働はクソということです。</b></p>
-<p><b>在各種聽不懂的詞彙轟炸下也來到了學期末,感覺自己好像有點懂了這課程又好像沒懂</b></p>
+<p></p>
+<p><b>在各種聽不懂的詞彙轟炸下也來到了學期末,感覺自己好像有點懂了這課程又好像沒懂,但我相信如果<span>能夠瞭解到python的運行方式,相信我們一定會對python改觀。</span></b></p>
 <p><b>感覺python跟c++滿像但又蠻多地方不一樣</b></p>
+<p><b>労働はクソということです。</b></p>
 <h1>cp2022H1</h1>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕 (<a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件).</p>
 <p><a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件應該可以在啟動 Brython 時, 設定將 .py 檔案放入 downloads/py 目錄中引用.</p>
