--- a/content/w15.html
+++ b/content/w15.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,11 +141,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w9 << <a href='w9.html'>Previous</a> <a href='w11.html'>Next</a> >> w11<br /><h1>w10</h1>
-<p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)程式</p>
-<p>因此還無法列出缺考名單</p>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/af03205e4c4a02c8006b51ec553fad6a/raw/37d33a0a268a6b86bfd9c75740ed40209ec88406/gistfile1.txt">點這裡列出w10考試成績</a></p>
-<br />w9 << <a href='w9.html'>Previous</a> <a href='w11.html'>Next</a> >> w11</div>
+    <div id="tipue_search_content">1a w14抽考成績與缺考人員名單 << <a href='1a w14抽考成績與缺考人員名單.html'>Previous</a> <a href='考試成績.html'>Next</a> >> 考試成績<br /><h1>w15</h1>
+<p></p>
+<br />1a w14抽考成績與缺考人員名單 << <a href='1a w14抽考成績與缺考人員名單.html'>Previous</a> <a href='考試成績.html'>Next</a> >> 考試成績</div>
         
     <!-- footer -->
       <div class="container">
