--- a/config/content.htm
+++ b/config/content.htm
@@ -37,8 +37,19 @@
 <h3>1a w14抽考成績與缺考人員名單</h3>
 <div><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/7f98aa18c39e3c0aeff0cd40bc2e2ee8/raw/a67e4f8a638b66e5d32e6484a436f8d2dd413ba0/gistfile1.txt"><span>點這裡執行</span>:1aw14抽考缺考人員名單</a></div>
 <h2>w15</h2>
+<h2>考試成績</h2>
+<p>1,為何學習計算機程式需要建立個人倉儲?</p>
+<p>讓每個改版步驟都可以通過調閱來檢視</p>
+<p>2,全球資訊網能夠提供甚麼功能或有什麼優點?</p>
+<p>與時俱進</p>
+<p>3,Replit, stud.cycu.org 與 localhost 分別代表甚麼?</p>
+<p>前兩個是一種遠端方式,locallhost是一種近端方式</p>
+<p>4,https, ssh 到底提供使用者那些功能或優點?</p>
+<p>https對於使用者來說比較方便,ssh需要在clone之前配置和添加ssh key</p>
+<p>5,Brython 與 Python 有甚麼差別?</p>
 <p></p>
-<h1>考試成績</h1>
+<p>6,能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</p>
+<p>7,變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p>
 <h2>1a</h2>
 <h3>第4週</h3>
 <p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)程式</p>
