--- a/content/考試成績.html
+++ b/content/考試成績.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='密碼亂數.html'>密碼亂數</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='抽點.html'>抽點</a><li><a href='奇怪的3D方塊.html'>奇怪的3D方塊</a><li><a href='test.html'>test</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='作業程式.html'>作業程式</a></li></ul><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='老師的繪畫方格.html'>老師的繪畫方格</a></li></ul><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='參考.html'>參考</a></li></ul><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='溫度轉換.html'>溫度轉換</a></li></ul><li class='has-children'><a href='W14.html'>W14</a><ul class='dropdown'><li><a href='1a w14抽考成績與缺考人員名單.html'>1a w14抽考成績與缺考人員名單</a></li></ul><li><a href='w15.html'>w15</a></li></ul><li class='has-children'><a href='考試成績.html'>考試成績</a><ul class='dropdown'><li class='has-children'><a href='1a.html'>1a</a><ul class='dropdown'><li><a href='第4週.html'>第4週</a><li><a href='第8週.html'>第8週</a><li><a href='第9週.html'>第9週</a><li><a href='第10週.html'>第10週</a><li><a href='第14週.html'>第14週</a></li></ul><li class='has-children'><a href='1b.html'>1b</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w14.html'>w14</a></li></li></ul></ul><li><a href='心得.html'>心得</a><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='密碼亂數.html'>密碼亂數</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='抽點.html'>抽點</a><li><a href='奇怪的3D方塊.html'>奇怪的3D方塊</a><li><a href='test.html'>test</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='作業程式.html'>作業程式</a></li></ul><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='老師的繪畫方格.html'>老師的繪畫方格</a></li></ul><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='參考.html'>參考</a></li></ul><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='溫度轉換.html'>溫度轉換</a></li></ul><li class='has-children'><a href='W14.html'>W14</a><ul class='dropdown'><li><a href='1a w14抽考成績與缺考人員名單.html'>1a w14抽考成績與缺考人員名單</a></li></ul><li><a href='w15.html'>w15</a><li><a href='考試成績.html'>考試成績</a><li class='has-children'><a href='1a.html'>1a</a><ul class='dropdown'><li><a href='第4週.html'>第4週</a><li><a href='第8週.html'>第8週</a><li><a href='第9週.html'>第9週</a><li><a href='第10週.html'>第10週</a><li><a href='第14週.html'>第14週</a></li></ul><li class='has-children'><a href='1b.html'>1b</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w14.html'>w14</a></li></li></ul></ul><li><a href='心得.html'>心得</a><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,6 +142,18 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w15 << <a href='w15.html'>Previous</a> <a href='1a.html'>Next</a> >> 1a<br /><h1>考試成績</h1>
+<p>1,為何學習計算機程式需要建立個人倉儲?</p>
+<p>讓每個改版步驟都可以通過調閱來檢視</p>
+<p>2,全球資訊網能夠提供甚麼功能或有什麼優點?</p>
+<p>與時俱進</p>
+<p>3,Replit, stud.cycu.org 與 localhost 分別代表甚麼?</p>
+<p>前兩個是一種遠端方式,locallhost是一種近端方式</p>
+<p>4,https, ssh 到底提供使用者那些功能或優點?</p>
+<p>https對於使用者來說比較方便,ssh需要在clone之前配置和添加ssh key</p>
+<p>5,Brython 與 Python 有甚麼差別?</p>
+<p></p>
+<p>6,能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</p>
+<p>7,變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p>
 <br />w15 << <a href='w15.html'>Previous</a> <a href='1a.html'>Next</a> >> 1a</div>
         
     <!-- footer -->
