--- a/config/content.htm
+++ b/config/content.htm
@@ -47,9 +47,11 @@
 <p>4,https, ssh 到底提供使用者那些功能或優點?</p>
 <p>https對於使用者來說比較方便,ssh需要在clone之前配置和添加ssh key</p>
 <p>5,Brython 與 Python 有甚麼差別?</p>
-<p></p>
+<p>簡單來說，Brython就是一隻披著Python皮的JavaScript</p>
 <p>6,能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</p>
+<p></p>
 <p>7,變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/0292272f055c578af61d0f172b1aacf8/raw/2e6c86061a93630664e21a6351679c4b03e3d474/gistfile1.txt">rect walk</a></p>
 <h2>1a</h2>
 <h3>第4週</h3>
 <p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)程式</p>
