--- a/content/w15.html
+++ b/content/w15.html
@@ -142,6 +142,20 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">1a w14抽考成績與缺考人員名單 << <a href='1a w14抽考成績與缺考人員名單.html'>Previous</a> <a href='考試成績.html'>Next</a> >> 考試成績<br /><h1>w15</h1>
+<p>1,為何學習計算機程式需要建立個人倉儲?</p>
+<p>讓每個改版步驟都可以通過調閱來檢視</p>
+<p>2,全球資訊網能夠提供甚麼功能或有什麼優點?</p>
+<p>與時俱進</p>
+<p>3,Replit, stud.cycu.org 與 localhost 分別代表甚麼?</p>
+<p>前兩個是一種遠端方式,locallhost是一種近端方式</p>
+<p>4,https, ssh 到底提供使用者那些功能或優點?</p>
+<p>https對於使用者來說比較方便,ssh需要在clone之前配置和添加ssh key</p>
+<p>5,Brython 與 Python 有甚麼差別?</p>
+<p>簡單來說，Brython就是一隻披著Python皮的JavaScript</p>
+<p>6,能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</p>
+<p></p>
+<p>7,變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/0292272f055c578af61d0f172b1aacf8/raw/2e6c86061a93630664e21a6351679c4b03e3d474/gistfile1.txt">rect walk</a></p>
 <br />1a w14抽考成績與缺考人員名單 << <a href='1a w14抽考成績與缺考人員名單.html'>Previous</a> <a href='考試成績.html'>Next</a> >> 考試成績</div>
         
     <!-- footer -->
