--- a/content/w15.html
+++ b/content/w15.html
@@ -156,7 +156,7 @@ img.add_border {
 <p>代表對於掌控python有足夠理解?</p>
 <p>7,變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p>
 <p>python程式中的幾個主指令是用來掌控關於下面子程序的</p>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/65308e50377e14dc28477179d6c9cace/raw/d675bd4ba82d45a2632f48162ab793715788111a/gistfile1.txtt">rect walk</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/65308e50377e14dc28477179d6c9cace/raw/8611c347cf977e04391382c9710239bc440e8531/gistfile1.txt">rect walk</a></p>
 <br />1a w14抽考成績與缺考人員名單 << <a href='1a w14抽考成績與缺考人員名單.html'>Previous</a> <a href='考試成績.html'>Next</a> >> 考試成績</div>
         
     <!-- footer -->
