更改名稱與首頁

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -2,7 +2,7 @@
 <p>           <img alt="" height="195" src="/images/20220412005788.jpg" width="253"/>    </p>
 <p>仔細看這個男人太狠了他居然把網頁名稱取得這麼中二,還把<span>現任臺北市市長的照片放在首頁</span></p>
 <p>41123147蔡承翰</p>
-<p><span>此網站使用</span><span> stud 伺服器編寫</span></p>
+<p><span>此網站使用</span><span> stud.cycu.org編寫</span></p>
 <p>githib倉儲:<a href="https://github.com/mdecp2022/site-hank474">mdecp2022/site-hank474: site-hank474 created by GitHub Classroom</a></p>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
 <h1>HW</h1>
@@ -101,10 +101,7 @@
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/6464b77824f57aac51d16dfe31b9a8f1/raw/eb9389f5b07968bccff28b52e0516ecfa527a6f3/gistfile1.txt">點這裡列出w14考試成績</a></p>
 <div></div>
 <h1>心得</h1>
-<p></p>
-<p><b>在各種聽不懂的詞彙轟炸下也來到了學期末,感覺自己好像有點懂了這課程又好像沒懂,但我相信如果<span>能夠瞭解到python的運行方式,相信我們一定會對python改觀。</span></b></p>
-<p><b>感覺python跟c++滿像但又蠻多地方不一樣</b></p>
-<p><b>労働はクソということです。</b></p>
+<p>在課程一開始始的時候,大家都當這堂課混混就好,直到w5的時候我才意識到要開始做不做不行了,所以我在w5的時候用replit創建了一個動態網站然後開始預習課堂上的作業:抽點程式,擷取個人靜態網站.</p>
 <h1>cp2022H1</h1>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕 (<a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件).</p>
 <p><a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件應該可以在啟動 Brython 時, 設定將 .py 檔案放入 downloads/py 目錄中引用.</p>
