--- a/content/About.html
+++ b/content/About.html
@@ -110,14 +110,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container">
                 <div class="row align-items-center">
-                <h1>飛天御劍流</h1>
+                <h1>MORE THAN MEETS THE EYE</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">飛天御劍流</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">MORE THAN MEETS THE EYE</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -142,8 +142,6 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='HW.html'>Next</a> >> HW<br /><h1>About</h1>
-<p>           <img alt="" height="195" src="./../images/20220412005788.jpg" width="253"/>    </p>
-<p>仔細看這個男人太狠了他居然把網頁名稱取得這麼中二,還把<span>現任臺北市市長的照片放在首頁</span></p>
 <p>41123147蔡承翰</p>
 <p><span>此網站使用</span><span> stud.cycu.org編寫</span></p>
 <p>githib倉儲:<a href="https://github.com/mdecp2022/site-hank474">mdecp2022/site-hank474: site-hank474 created by GitHub Classroom</a></p>
