--- a/content/心得.html
+++ b/content/心得.html
@@ -110,14 +110,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container">
                 <div class="row align-items-center">
-                <h1>飛天御劍流</h1>
+                <h1>MORE THAN MEETS THE EYE</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">飛天御劍流</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">MORE THAN MEETS THE EYE</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -142,10 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1<br /><h1>心得</h1>
-<p></p>
-<p><b>在各種聽不懂的詞彙轟炸下也來到了學期末,感覺自己好像有點懂了這課程又好像沒懂,但我相信如果<span>能夠瞭解到python的運行方式,相信我們一定會對python改觀。</span></b></p>
-<p><b>感覺python跟c++滿像但又蠻多地方不一樣</b></p>
-<p><b>労働はクソということです。</b></p>
+<p>在課程一開始始的時候,大家都當這堂課混混就好,直到w5的時候我才意識到要開始做不做不行了,所以我在w5的時候用replit創建了一個動態網站然後開始預習課堂上的作業:抽點程式,擷取個人靜態網站.</p>
 <br />w14 << <a href='w14.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1</div>
         
     <!-- footer -->
