2D 動態繪圖練習

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -49,19 +49,18 @@
 <p>代表對於掌控python有足夠理解?</p>
 <p>7,變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p>
 <p>python程式中的幾個主指令是用來掌控關於下面子程序的</p>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/c22effbd7aa71fd620ba21d7df933c1b/raw/f86de631aff41d716cac239eb858426c7c27651f/gistfile1.txt">rect walk</a></p>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/569984ea9b0089d67f4efc04b9bfa67f/raw/182ec850b9b71d37afe9788f8f95767727544226/gistfile1.txt">test</a></p>
-<!-- 納入 Brython 環境 -->
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/569984ea9b0089d67f4efc04b9bfa67f/raw/182ec850b9b71d37afe9788f8f95767727544226/gistfile1.txt">rect walk</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/569984ea9b0089d67f4efc04b9bfa67f/raw/182ec850b9b71d37afe9788f8f95767727544226/gistfile1.txt"><!-- 納入 Brython 環境 -->
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
-<!-- 啟動 Brython -->
-<p>
+<!-- 啟動 Brython --></a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/569984ea9b0089d67f4efc04b9bfa67f/raw/182ec850b9b71d37afe9788f8f95767727544226/gistfile1.txt">
 <script>
 window.onload=function(){
 brython({debug:1, pythonpath:['/static/','./../downloads/py/']});
 }
 </script>
-<!-- 給定 brython_div1 division 標註 --></p>
+</a><!-- 給定 brython_div1 division 標註 --></p>
 <div id="brython_div1"></div>
 <!-- 加入啟動按鈕後的 Rect 行走程式原始碼 -->
 <script type="text/python">
